Bug 96228 - SSBO test regressions from mesa 5b267509
Summary: SSBO test regressions from mesa 5b267509
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Dave Airlie
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 96254
  Show dependency treegraph
 
Reported: 2016-05-26 17:51 UTC by Mark Janes
Modified: 2016-05-31 06:06 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2016-05-26 17:51:58 UTC
This commit regresses tests in dEQP and piglit:

For BDW, BSW, SKL: 

deqp-gles31.functional.ssbo.layout.random.all_per_block_buffers.13
src/compiler/glsl/link_uniform_initializers.cpp:172: void linker::set_block_binding(gl_shader_program*, const char*, unsigned int, int): Assertion `!"Failed to initialize block binding"' failed.

For BYT, IVB, HSW, BDW, BSW, SKL, KBL:

piglit.spec.arb_shader_storage_buffer_object.compiler.unsized-array-not-in-last-position
Standard Error
Successfully compiled fragment shader /tmp/build_root/m64/lib/piglit/tests/spec/arb_shader_storage_buffer_object/compiler/unsized-array-not-in-last-position.frag:
Comment 1 Mark Janes 2016-05-26 21:08:42 UTC
As per Dave Airlie, piglit.spec.arb_shader_storage_buffer_object.compiler.unsized-array-not-in-last-position is a bad test and will be removed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.